Move js and css to separate static files.

--- a/views/index.html
+++ b/views/index.html
@@ -4,107 +4,7 @@
 	<title>BarChat</title>
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css" />
 	<link rel="stylesheet" type="text/css" href="http://wavded.github.com/humane-js/themes/libnotify.css" />
-	<style type="text/css">
-html {
-	height: 100%;
-}
-body {
-	margin: 0px;
-	font-family: arial;
-	height: 100%;
-}
-header {
-	background-color: #e0e0e0;
-	height: 66px;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-}
-header h1 {
-	color: white;
-	padding: 10px;
-	font-size: 200%;
-}
-#wrap {
-	height: 100%;
-}
-#statusbar {
-	width: 79px;
-	border-right: 1px solid #eee;
-	position: fixed;
-	height: 100%;
-	top: 0px;
-	left: 0px;
-	margin-top: 66px;
-}
-#statusbar label {
-	font-size: 10px;
-	background: #666;
-	color: white;
-	display: block;
-	padding: 0px 0px 0px 10px;
-	margin: 15px 0px 0px;
-}
-#statusbar .user_placard {
-	height: 32px;
-	margin: 5px 5px;
-}
-#statusbar .user_placard .status {
-	width: 30px;
-	height: 30px;
-	border: 1px solid #eee;
-	margin: 0px 5px 0px 0px;
-	display: block;
-	float: left;
-}
-#statusbar img {
-	width: 32px;
-	height: 32px;
-}
-#users_offline .avatar {
-	opacity: 0.4;
-}
-#rooms {
-	padding-bottom: 80px;
-	margin: 66px 0px 0px 80px;
-}
-#controls {
-	position: fixed;
-	margin-left: 79px;
-	bottom: 0px;
-	background-color: #EEE;
-	width: 100%;
-	padding: 0px 5px 5px 5px;
-}
-#roomtabs {
-	margin: 2px 0px 10px 0px;
-}
-#roomtabs li {
-	display: inline;
-	background-color: #ddd;
-	padding: 2px 15px;
-}
-#roomtabs li.active {
-	background-color: #fff;
-}
-.room {
-	display: none;
-}
-.room.active {
-	display: block;
-}
-#roomtabs a {
-	color: #666;
-	text-decoration: none;
-}
-
-.room p {
-	font-size: 15px;
-	margin-top: 30px;
-}
-	</style>
-
+	<link rel="stylesheet" type="text/css" href="http://home.lise:8080/css/barchat.css" />
 </head>
 <body>
 
@@ -172,63 +72,7 @@ header h1 {
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/ICanHaz.js/0.9/ICanHaz.min.js"></script>
 <script type="text/javascript" src="http://wavded.github.com/humane-js/humane.js"></script>
-<script type="text/javascript">
-$(function(){
-	// Initialize room sample content
-	var s = 4;
-	$('#room1,#room2,#room3').each(function(){
-		var element = $(this);
-		s++;
-		$.getJSON('http://json-lipsum.appspot.com/?amount=' + s + '&start=no&lang=en&callback=?', function(results) {
-			for(var p in results.lipsum) {
-				$(element).append('<p>' + results.lipsum[p] + '</p>');
-			}
-		});
-	});
-
-	// Initialize user sample content
-	$('#statusbar').append(ich.placard_group({name: 'online', placards: [{avatar: 'avatar.png', nickname: 'Bill Jennings'}]}));
-	$('#statusbar').append(ich.placard_group({name: 'services', placards: [{avatar: 'github.png', nickname: 'GitHub'}]}));
-	$('#statusbar').append(ich.placard_group({name: 'offline', placards: [{avatar: 'avatar2.png', nickname: 'Sue Heron'}]}));
-
-
-	$('#loginform').submit(function(){
-		// @todo login with abstraction:
-		// var result = Servers.login($('#server').val(), $('#username').val(), $('#password').val());
-		// if(result.success) {humane.info('Logged in as ' + result.nickname + '.');} else {humane.error(result.errMsg);}
-		$('#loginform').attr('action', $('#server').val());
-		$.post(
-			$('#loginform').attr('action'), 
-			$('#loginform').serialize(), 
-			function(response){
-				if(response.err) {
-					humane.error(response.errMsg);
-				}
-				else {
-					humane.info('Logged in as ' + response.nickname + '.');
-				}
-			},
-			'jsonp'
-		);
-		return false;
-	});
-
-
-	$('#roomtabs a').click(function(){
-		$('.room,#roomtabs li').removeClass('active');
-		$($(this).attr('href')).addClass('active');
-		$(this).parents('li').addClass('active');
-		return false;
-	});
-
-	window.setInterval(function(){
-		$.get('/api/v1.0/getMessages', 'foo=1', function(data){
-			console.log(data);
-		}, 'jsonp');
-	}, 2000);
-
-});
-</script>
+<script type="text/javascript" src="http://home.lise:8080/js/barchat.ui.js"></script>
 
 </body>
 </html>
