--- a/views/index.html
+++ b/views/index.html
@@ -65,8 +65,8 @@
 						<tr><td><label for="server">Server:</label></td><td><select name="server" id="server">
 							<option value="http://{{$host}}/api/v1.0/getUserToken?callback=?">Lise</option>
 						</select></td></tr>
-						<tr><td><label for="username">Username:</label></td><td><input type="text" name="username"></td></tr>
-						<tr><td><label for="password">Password:</label></td><td><input type="password" name="password"></td></tr>
+						<tr><td><label for="username">Username:</label></td><td><input type="text" id="username" name="username"></td></tr>
+						<tr><td><label for="password">Password:</label></td><td><input type="password" id="password" name="password"></td></tr>
 						<tr><td></td><td><input type="submit" value="Log In"></td></tr>
 					</table>
 				</form>
@@ -92,6 +92,7 @@
 <script type="text/javascript" src="http://{{$host}}/js/date.min.js"></script>
 <script type="text/javascript" src="http://{{$host}}/js/humane.js"></script>
 <script type="text/javascript" src="http://{{$host}}/js/barchat.ui.js"></script>
+<script type="text/javascript" src="http://{{$host}}/js/barchat.obj.js"></script>
 
 </body>
 </html>
