Room lists, underscore, and local CSS.

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>BarChat</title>
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css" />
-	<link rel="stylesheet" type="text/css" href="http://wavded.github.com/humane-js/themes/libnotify.css" />
+	<link rel="stylesheet" type="text/css" href="http://{{$host}}/css/libnotify.css" />
 	<link rel="stylesheet" type="text/css" href="http://{{$host}}/css/barchat.css" />
 </head>
 <body>
