Messages, send and receive.

--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
 <div class="message" data-user="{{user.user_id}}">
 {{#user.username}}
 <div class="who">
-{{#user.avatar}}<img src="{{user.avatar}}" class="avatar">{{/user.avatar}}
+<img src="{{user.avatar}}" class="avatar">
 <span class="username">{{user.username}}</span>
 </div>
 {{/user.username}}
